--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <head>
-  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-  <script src="../node_modules/lit/polyfill-support.js"></script>
-  <script type="module" src="./dist/simple-greeting.js"></script>
+  <!-- <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../node_modules/lit/polyfill-support.js"></script> -->
+  <!-- <script type="module" src="./dist/simple-greeting-copy.js"></script> -->
+  <script type="module" src="./dist/simple-greeting.bundled.js"></script>
 </head>
 <body>
   <simple-greeting name="World"></simple-greeting>
